# easy-proxy

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yaml
.config/: easy_proxy.yaml
.github/: FUNDING.yml
.github/workflows/: Ci.yml
api/auth/: Cargo.toml
api/auth/src/: api_doc.rs  lib.rs  routes.rs
api/auth/src/resource/: login.rs  mod.rs
api/service/: Cargo.toml
api/service/src/: api_doc.rs  routes.rs
api/service/src/resource/: add.rs  delete.rs  mod.rs  reload.rs  search.rs  update.rs  validate.rs
api/service/src/resource/models/: mod.rs
api/setup/: Cargo.toml
api/setup/src/: api_doc.rs  routes.rs
api/setup/src/resource/: installing.rs  is_installing.rs  mod.rs
config/: Cargo.toml  easy_proxy.yaml
config/jwt/: default_private.key  public.key
config/src/: lib.rs  models.rs  proxy.rs  runtime.rs
config/src/proxy/: mod.rs  provider_files.rs
easy-proxy/: Cargo.toml
easy-proxy/src/: main.rs
examples/: docker.yaml  proxy.yaml
kube/: deployment.yml  pod.yml
package/common/: Cargo.toml
package/common/src/: lib.rs  response.rs
package/config/: Cargo.toml
package/config/src/: lib.rs  models.rs
package/database/: Cargo.toml
package/database/src/: lib.rs
package/database/src/models/: admin.rs  installing.rs  mod.rs  service.rs
package/jwt/: Cargo.toml
package/jwt/src/: keys.rs  lib.rs  models.rs  sign.rs  verify.rs
package/middleware/: Cargo.toml
package/middleware/src/: authorization.rs  lib.rs
proxy/: Cargo.toml
proxy/balance/: Cargo.toml
proxy/balance/src/: algorithm.rs  lib.rs
proxy/balance/src/discover/: mod.rs  round_robin.rs
proxy/common/: Cargo.toml
proxy/common/src/: lib.rs
proxy/io/: Cargo.toml
proxy/io/src/: lib.rs  tokiort.rs
proxy/pool/: Cargo.toml
proxy/pool/src/: lib.rs
proxy/proxy/: Cargo.toml
proxy/proxy/src/: connect.rs  inbound.rs  lib.rs  listen.rs  response.rs  tunnel.rs
proxy/src/: backend.rs  lib.rs  modify.rs  response.rs  services.rs
runtime/: Cargo.toml
runtime/src/: main.rs
scripts/: install.sh  uninstall.sh
src/: commands.rs  errors.rs  main.rs  tokiort.rs  utils.rs
src/acme/: acme_client.rs  client.rs  crypto.rs  http_client.rs  jws.rs  mod.rs
src/api/: installing.rs  mod.rs  router.rs  utils.rs
src/api/instruction/: installing.rs  mod.rs
src/api/instruction/admin/: authen.rs  mod.rs
src/app/: mod.rs  utils.rs
src/app/instruction/: installing.rs
src/app/instruction/admin/: authen.rs  mod.rs
src/config/: backend.rs  certs.rs  cli.rs  mod.rs  proxy.rs  runtime.rs  store.rs
src/db/: mod.rs
src/db/builder/: mod.rs
src/db/model/: admin.rs  installing.rs  mod.rs
src/io/: mod.rs  tokiort.rs
src/jwt/: mod.rs
src/proxy/: backend.rs  constant.rs  context.rs  dynamic_certificate.rs  mod.rs  request_modifiers.rs  response.rs  server.rs
src/proxy/filter/: mod.rs
src/proxy/handler/: connect.rs  http_parse.rs  inbound.rs  mod.rs  remote_stream.rs  tunnel.rs
src/proxy/io/: Credit.md  boxed.rs  either.rs  mod.rs  prefixed.rs  scoped.rs  sensor.rs  tokiort.rs
src/proxy/proto/: http.rs
src/proxy/response/: mod.rs
src/proxy/routes/: mod.rs
src/proxy/services/: mod.rs  round_robin.rs
src/proxy/state/: mod.rs
src/proxy/transport/: listener.rs
src/server/: mod.rs
