[package]
name = "easy-proxy"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
once_cell = "1.19.0"
pingora = { version = "0.3", features = [ "lb" ] }
thiserror = "1.0"
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait="0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.7"
matchit = "0.8"
fnv = "1"