[package]
name = "easy-proxy"
version = "0.1.11"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
once_cell = "1.20.2"
pingora = { git = "https://github.com/cloudflare/pingora", rev="be4a023d18c2b061f64ad5efd0868f9498199c91", features = ["lb", "openssl"] }
thiserror = "2.0"
serde_yml = "0.0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
async-trait="0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
bytes = "1.7"
matchit = "0.8"
fnv = "1"
tokio = { version = "1", features = ["rt"] }
http = "1.1"
mimalloc = "0.1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
ring = "0.17"
base64 = "0.22"
sha2 = "0.10"
rcgen = "0.13"
openssl = { version = "0.10", features = ["vendored"] }
clap = { version="4.5", features = ["derive"] }
hmac = "0.12" 
chrono = "0.4"

[profile.release]
overflow-checks = true
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"