[package]
name = "config"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_yaml = { workspace = true }
serde = { workspace = true }
pingora = { workspace = true }
fnv = { workspace = true }
notify = { workspace = true }
matchit = { workspace = true }
tracing = { workspace = true }
ahash = { workspace = true }