[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = { path = "../config" }
anyhow = { workspace = true }
async-trait = { workspace = true }
pingora = { workspace = true }
tracing = { workspace = true }
fnv = { workspace = true }
http = { workspace = true }