[package]
name = "runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy = { path = "../proxy" }
config = { path = "../config" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
mimalloc = { workspace = true }
clap = { workspace = true }