[package]
name = "api_service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../../package/common" }
database = { path = "../../package/database" }
middleware = { path = "../../package/middleware" }
serde = { version="1", features = ["derive"] }