[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surrealdb = { version="1", features = ["kv-mem", "kv-speedb", "kv-tikv"]}
serde = { version="1", features = ["derive"] }
tokio = { version = "1", features = ["full"] }
once_cell = "1"
config = { path = "../config" }
