[package]
name = "jwt"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
jsonwebtoken = "8"
chrono = "0.4"
serde = { version="1", features = ["derive"] }
database = { path = "../database" }
config = { path = "../config" }