[package]
name = "middleware"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1"
common = { path = "../common" }
jwt = { path = "../jwt" }
serde = { version="1", features = ["derive"] }