[package]
name = "proxy-pool"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy-common = { path = "../common" }
config = { path = "../../package/config" }
proxy-io = { path = "../io" }
lazy_static = "1"
rand = "0.8"