[package]
name = "proxy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proxy-common = { path = "../common" }
common = { path = "../../package/common" }
config = { path = "../../package/config" }
proxy-balance = { path = "../balance" }
proxy-io = { path = "../io" }